feat: 2.0.0-SNAPSHOT(SpringBoot4 & Java21)